--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,14 @@ Django==5.2.7
 django-widget-tweaks==1.5.0
 Flask==3.1.2
 frozenlist==1.7.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 MouseInfo==0.1.3
 multidict==6.6.4
+packaging==25.0
 pillow==11.3.0
 propcache==0.3.2
 psycopg2==2.9.10
